--- a/src/main/resources/fxmls/Idol/MainMenuIdolPage.fxml
+++ b/src/main/resources/fxmls/Idol/MainMenuIdolPage.fxml
@@ -9,31 +9,31 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.MainMenuIdolPageView">
     <left>
         <VBox alignment="TOP_CENTER" prefHeight="760.0" prefWidth="286.0" spacing="50.0" style="-fx-background-color: #f0f3f7;" BorderPane.alignment="CENTER">
             <children>
-                <ImageView fitHeight="168.0" fitWidth="181.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="imageView" fitHeight="168.0" fitWidth="181.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../../../resources/idol/images/profile-user.png" />
                     </image>
                 </ImageView>
-                <Button fx:id="profileButton12" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Profile">
+                <Button fx:id="profileButton" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Profile">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button fx:id="profileButton1" layoutX="58.0" layoutY="268.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Bookings">
+                <Button fx:id="bookingsButton" layoutX="58.0" layoutY="268.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Bookings">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button fx:id="profileButton11" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Settings">
+                <Button fx:id="settingsButton" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Settings">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button fx:id="profileButton111" layoutX="58.0" layoutY="473.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1b4994;" text="Fanmeets">
+                <Button fx:id="fanmeetsButton" layoutX="58.0" layoutY="473.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1b4994;" text="Fanmeets">
                     <font>
                         <Font size="18.0" />
                     </font>
@@ -48,6 +48,6 @@
         </VBox>
     </left>
     <center>
-      <StackPane BorderPane.alignment="CENTER" />
+      <StackPane fx:id="stackPane" BorderPane.alignment="CENTER" />
     </center>
 </BorderPane>
