--- a/src/main/resources/fxmls/fan/IdolCards.fxml
+++ b/src/main/resources/fxmls/fan/IdolCards.fxml
@@ -8,16 +8,16 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="210.0" prefWidth="210.0" style="-fx-background-color: #ededed; -fx-border-color: #1b4994; -fx-border-radius: 15; -fx-background-radius: 15;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="224.0" prefWidth="224.0" style="-fx-background-color: #ededed; -fx-border-color: #1b4994; -fx-border-radius: 15; -fx-background-radius: 15;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.cards.IdolCardView">
     <children>
-        <VBox alignment="CENTER" layoutX="-2.0" layoutY="-1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="210.0" prefWidth="210.0">
+        <VBox alignment="CENTER" layoutX="-2.0" layoutY="-1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="224.0" prefWidth="224.0">
             <children>
-                <ImageView fitHeight="132.0" fitWidth="132.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="profilePicture" fitHeight="132.0" fitWidth="132.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../../fan/images/profileMenu.png" />
                     </image>
                 </ImageView>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Idol Name" textAlignment="CENTER" wrappingWidth="180.0">
+                <Text fx:id="idolName" strokeType="OUTSIDE" strokeWidth="0.0" text="Idol Name" textAlignment="CENTER" wrappingWidth="180.0">
                     <VBox.margin>
                         <Insets top="20.0" />
                     </VBox.margin>
