--- a/src/main/resources/fxmls/Idol/FanMeetDetailsIdol.fxml
+++ b/src/main/resources/fxmls/Idol/FanMeetDetailsIdol.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -31,7 +30,7 @@
                 <Pane prefHeight="316.0" prefWidth="282.0">
                     <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTGRAY" height="254.0" layoutX="16.0" layoutY="31.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-fx-arc-height: 30; -fx-arc-width: 30;" width="250.0" />
-                        <ImageView fitHeight="185.0" fitWidth="179.0" layoutX="53.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imageView" fitHeight="185.0" fitWidth="179.0" layoutX="53.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../../../resources/idol/images/profile-user.png" />
                             </image>
@@ -68,17 +67,17 @@
                 </VBox>
                 <VBox alignment="CENTER_LEFT" prefHeight="316.0" prefWidth="186.0" spacing="40.0">
                     <children>
-                        <Label text="4:10 PM">
+                        <Label fx:id="timeLabel" text="4:10 PM">
                             <font>
                                 <Font name="Arial" size="25.0" />
                             </font>
                         </Label>
-                        <Label text="4/3/2024">
+                        <Label fx:id="dateLabel" text="4/3/2024">
                             <font>
                                 <Font name="Arial" size="25.0" />
                             </font>
                         </Label>
-                        <Label text="20 Minutes">
+                        <Label fx:id="durationLabel" text="20 Minutes">
                             <font>
                                 <Font name="Arial" size="25.0" />
                             </font>
@@ -92,12 +91,12 @@
         </HBox>
         <HBox alignment="CENTER" prefHeight="55.0" prefWidth="800.0">
             <children>
-                <Label alignment="CENTER" prefHeight="27.0" prefWidth="83.0" style="-fx-border-color: black; -fx-border-width: 0 2 0 0;" text="PRICE ">
+                <Label alignment="CENTER" prefHeight="27.0" prefWidth="195.0" style="-fx-border-color: black; -fx-border-width: 0 2 0 0;" text="Price per minute">
                     <font>
                         <Font name="Arial" size="24.0" />
                     </font>
                 </Label>
-                <Label alignment="CENTER" layoutX="368.0" layoutY="22.0" prefHeight="27.0" prefWidth="83.0" text="P5000" textFill="#1b4994">
+                <Label fx:id="pricePerMinuteLabel" alignment="CENTER" layoutX="368.0" layoutY="22.0" prefHeight="27.0" prefWidth="122.0" text="P5000" textFill="#1b4994">
                     <font>
                         <Font name="Arial Bold" size="24.0" />
                     </font>
@@ -107,13 +106,5 @@
                 </Label>
             </children>
         </HBox>
-        <Button fx:id="FanMeetDetailsBackButton" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Back">
-            <font>
-                <Font size="18.0" />
-            </font>
-         <VBox.margin>
-            <Insets top="5.0" />
-         </VBox.margin>
-        </Button>
     </children>
 </VBox>
