--- a/src/main/resources/fxmls/Idol/FeedbackCard.fxml
+++ b/src/main/resources/fxmls/Idol/FeedbackCard.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -9,13 +8,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="580.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="580.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.FeedbackCardView">
    <padding>
       <Insets bottom="10.0" left="10.0" top="10.0" />
    </padding>
    <children>
-      <ImageView fitHeight="127.0" fitWidth="143.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imageView" fitHeight="127.0" fitWidth="143.0" pickOnBounds="true" preserveRatio="true">
          <HBox.margin>
             <Insets right="10.0" />
          </HBox.margin>
@@ -28,17 +26,15 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
          <children>
-            <Label layoutX="22.0" prefHeight="35.0" prefWidth="127.0" text="Fan Name">
+            <Label fx:id="fanUsernameLabel" layoutX="22.0" prefHeight="35.0" prefWidth="127.0" text="Fan Username">
                <font>
                   <Font name="Arial" size="18.0" />
                </font>
             </Label>
-            <Label layoutX="22.0" layoutY="35.0" prefHeight="88.0" prefWidth="379.0" text="&quot;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&quot;" wrapText="true" />
-            <Button layoutX="284.0" layoutY="5.0" mnemonicParsing="false" style="-fx-background-color: #1571b2; -fx-background-radius: 10; -fx-border-radius: 10;" text="View Full Feedback" textFill="WHITE">
+            <Label fx:id="feedbackLabel" layoutX="22.0" layoutY="35.0" prefHeight="88.0" prefWidth="379.0" wrapText="true">
                <font>
-                  <Font name="Arial" size="12.0" />
-               </font>
-            </Button>
+                  <Font size="18.0" />
+               </font></Label>
          </children>
       </Pane>
    </children>
