--- a/src/main/resources/fxmls/Idol/FeedbackPopupView.fxml
+++ b/src/main/resources/fxmls/Idol/FeedbackPopupView.fxml
@@ -1,45 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.FeedbackPopupView">
    <children>
       <HBox prefHeight="51.0" prefWidth="600.0" style="-fx-background-color: #1b4994;">
          <children>
-            <Label alignment="CENTER" prefHeight="51.0" prefWidth="378.0" text="February 14, 2024 Fan Meet Feedbacks" textFill="WHITE">
+            <Label fx:id="dateLabel" alignment="CENTER" prefHeight="50.0" prefWidth="319.0" text="February 14, 2024 Fanmeet Feedbacks" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="14.0" />
                </font>
             </Label>
             <Pane prefHeight="51.0" prefWidth="221.0">
-               <children>
-                  <Button layoutX="152.0" layoutY="1.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: transparent;">
-                     <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../idol/images/exit-bitton.png" />
-                           </image>
-                        </ImageView>
-                     </graphic></Button>
-               </children>
                <padding>
                   <Insets bottom="20.0" top="20.0" />
                </padding>
             </Pane>
          </children></HBox>
-      <ScrollPane hbarPolicy="NEVER" prefHeight="349.0" prefWidth="600.0">
+      <ScrollPane fx:id="scrollpane" hbarPolicy="NEVER" prefHeight="349.0" prefWidth="600.0">
          <content>
-            <FlowPane prefHeight="350.0" prefWidth="598.0" />
+            <FlowPane fx:id="flowpane" prefHeight="350.0" prefWidth="598.0" />
          </content>
       </ScrollPane>
    </children>
