--- a/src/main/resources/fxmls/Idol/IdolFanMeetsView.fxml
+++ b/src/main/resources/fxmls/Idol/IdolFanMeetsView.fxml
@@ -37,12 +37,12 @@
                   <Font name="Arial" size="18.0" />
                </font>
             </Button>
-            <ScrollPane fx:id="scrollPane" layoutX="66.0" layoutY="172.0" prefHeight="484.0" prefWidth="895.0">
+            <ScrollPane fx:id="scrollPane" layoutX="66.0" layoutY="172.0" prefHeight="484.0" prefWidth="895.0" vbarPolicy="NEVER">
                <content>
                   <FlowPane fx:id="flowPane" prefHeight="488.0" prefWidth="883.0" />
                </content>
             </ScrollPane>
-            <Label layoutX="70.0" layoutY="125.0" prefHeight="38.0" prefWidth="419.0" text="Label (Depending on finished or Upcoming Fan meets)">
+            <Label fx:id="headingLabel" layoutX="70.0" layoutY="125.0" prefHeight="38.0" prefWidth="419.0">
                <font>
                   <Font name="Arial Black" size="18.0" />
                </font>
