--- a/src/main/resources/fxmls/fan/BookingsUI.fxml
+++ b/src/main/resources/fxmls/fan/BookingsUI.fxml
@@ -56,7 +56,10 @@
             </HBox>
             <ScrollPane id="scrollPane" fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="595.0" prefWidth="1014.0">
                <content>
-                  <FlowPane fx:id="flowPane" alignment="TOP_CENTER" prefHeight="599.0" prefWidth="999.0" />
+                  <FlowPane fx:id="flowPane" alignment="TOP_CENTER" prefHeight="599.0" prefWidth="999.0" vgap="15.0">
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </padding></FlowPane>
                </content>
             </ScrollPane>
          </children>
