--- a/src/main/resources/fxmls/fan/UnfinishedFanMeetsCard.fxml
+++ b/src/main/resources/fxmls/fan/UnfinishedFanMeetsCard.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<HBox prefHeight="185.0" prefWidth="943.0" style="-fx-border-color: #1b4994; -fx-background-radius: 10; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<HBox prefHeight="185.0" prefWidth="943.0" style="-fx-border-color: #1b4994; -fx-background-radius: 10; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.cards.UnfinishedFanMeetCardView">
    <children>
       <VBox prefHeight="182.0" prefWidth="149.0">
          <children>
@@ -55,7 +55,7 @@
       </VBox>
       <VBox layoutX="11.0" layoutY="11.0" prefHeight="150.0" prefWidth="194.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="220000202021">
+            <Text fx:id="meetIDLB" strokeType="OUTSIDE" strokeWidth="0.0" text="220000202021">
                <font>
                   <Font size="22.0" />
                </font>
@@ -63,7 +63,7 @@
                   <Insets left="8.0" top="5.0" />
                </VBox.margin>
             </Text>
-            <Text layoutX="18.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="February 26, 2024">
+            <Text fx:id="dateLB" layoutX="18.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="February 26, 2024">
                <font>
                   <Font size="22.0" />
                </font>
@@ -71,7 +71,7 @@
                   <Insets left="8.0" top="5.0" />
                </VBox.margin>
             </Text>
-            <Text layoutX="10.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="8:00 AM">
+            <Text fx:id="timeLB" layoutX="10.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="8:00 AM">
                <font>
                   <Font size="22.0" />
                </font>
@@ -79,7 +79,7 @@
                   <Insets left="8.0" top="5.0" />
                </VBox.margin>
             </Text>
-            <Text layoutX="18.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="20 minutes">
+            <Text fx:id="durationLB" layoutX="18.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="20 minutes">
                <font>
                   <Font size="22.0" />
                </font>
@@ -87,7 +87,7 @@
                   <Insets left="10.0" top="5.0" />
                </VBox.margin>
             </Text>
-            <Text layoutX="10.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Leonhard Leung">
+            <Text fx:id="idolNameLB" layoutX="10.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Leonhard Leung">
                <font>
                   <Font size="22.0" />
                </font>
@@ -99,7 +99,7 @@
       </VBox>
       <VBox alignment="TOP_RIGHT" prefHeight="150.0" prefWidth="641.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Booked on 2023 -11-17  15:30:10" wrappingWidth="343.51747703552246">
+            <Text fx:id="timestampLB" strokeType="OUTSIDE" strokeWidth="0.0" text="Booked on 2023 -11-17  15:30:10" wrappingWidth="343.51747703552246">
                <font>
                   <Font size="22.0" />
                </font>
@@ -107,7 +107,7 @@
                   <Insets right="18.0" top="5.0" />
                </VBox.margin>
             </Text>
-            <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="174.0" style="-fx-background-color: #1b4994;" text="Cancel" textFill="WHITE">
+            <Button fx:id="cancelBT" mnemonicParsing="false" prefHeight="46.0" prefWidth="174.0" style="-fx-background-color: #1b4994;" text="Cancel" textFill="WHITE">
                <VBox.margin>
                   <Insets right="18.0" top="87.0" />
                </VBox.margin>
