--- a/src/main/resources/fxmls/fan/UpcomingFanMeetsPage.fxml
+++ b/src/main/resources/fxmls/fan/UpcomingFanMeetsPage.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" prefHeight="760.0" prefWidth="1013.6" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" prefHeight="760.0" prefWidth="1013.6" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.UpcomingFanMeetsView">
    <children>
       <Pane prefHeight="67.2" prefWidth="1014.0" style="-fx-background-color: #1b4994;">
          <children>
-            <ImageView fitHeight="50.0" fitWidth="57.0" layoutX="21.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="backBT" fitHeight="50.0" fitWidth="57.0" layoutX="21.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../fan/images/back-button.png" />
                </image>
@@ -33,7 +33,7 @@
       </Pane>
       <Pane minHeight="-Infinity" prefHeight="139.0" prefWidth="1014.0">
          <children>
-            <Pane layoutX="21.0" layoutY="22.0" prefHeight="116.0" prefWidth="974.0" />
+            <Pane fx:id="idolDetailsPane" layoutX="21.0" layoutY="22.0" prefHeight="116.0" prefWidth="974.0" />
          </children></Pane>
       <Text id="Upcoming" strokeType="OUTSIDE" strokeWidth="0.0" text="Upcomming Fan Meets">
          <font>
@@ -43,9 +43,9 @@
             <Insets top="15.0" />
          </VBox.margin>
       </Text>
-      <ScrollPane hbarPolicy="NEVER" prefHeight="500.0" prefWidth="1014.0">
+      <ScrollPane id="scrollPane" fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="500.0" prefWidth="1014.0">
          <content>
-            <FlowPane alignment="TOP_CENTER" prefHeight="505.0" prefWidth="1012.0">
+            <FlowPane id="flowPane" fx:id="flowPane" alignment="TOP_CENTER" prefHeight="505.0" prefWidth="1012.0">
                <padding>
                   <Insets top="15.0" />
                </padding>
