--- a/src/main/resources/fxmls/fan/UpcomingFanMeetsPage.fxml
+++ b/src/main/resources/fxmls/fan/UpcomingFanMeetsPage.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" prefHeight="760.0" prefWidth="1013.6" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.UpcomingFanMeetsView">
+<VBox alignment="TOP_CENTER" prefHeight="760.0" prefWidth="1013.6" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.UpcomingFanMeetsView">
    <children>
       <Pane prefHeight="67.2" prefWidth="1014.0" style="-fx-background-color: #1b4994;">
          <children>
@@ -29,7 +33,28 @@
       </Pane>
       <Pane minHeight="-Infinity" prefHeight="139.0" prefWidth="1014.0">
          <children>
-            <Pane fx:id="idolDetailsPane" layoutX="21.0" layoutY="22.0" prefHeight="116.0" prefWidth="974.0" />
+            <Pane fx:id="idolDetailsPane" layoutX="21.0" layoutY="22.0" prefHeight="116.0" prefWidth="974.0">
+               <children>
+                  <Pane layoutX="-2.0" prefHeight="116.0" prefWidth="974.0" style="-fx-background-color: #f0f3f7; -fx-border-color: #1b4994; -fx-border-radius: 5;">
+                     <children>
+                        <Text layoutX="17.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="IdolName" wrappingWidth="126.67007446289062">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Text>
+                        <Text layoutX="15.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&quot; Lorem Ipsum dolor slt amet, consectetur adipiscing Lorem Ipsum dolor slt amet, consectetur adipiscing Lorem Ipsum dolor slt amet, consectetur adipiscing Lorem Ipsum dolor slt amet, consectetur adipiscing L" wrappingWidth="787.0333862304688">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Text>
+                        <ImageView fitHeight="87.0" fitWidth="109.0" layoutX="851.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../fan/images/profile-user.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </Pane>
+               </children></Pane>
          </children></Pane>
       <Text id="Upcoming" strokeType="OUTSIDE" strokeWidth="0.0" text="Upcomming Fan Meets">
          <font>
@@ -41,9 +66,9 @@
       </Text>
       <ScrollPane id="scrollPane" fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="500.0" prefWidth="1014.0">
          <content>
-            <FlowPane id="flowPane" fx:id="flowPane" alignment="TOP_CENTER" prefHeight="505.0" prefWidth="1012.0" vgap="15.0">
+            <FlowPane id="flowPane" fx:id="flowPane" alignment="TOP_CENTER" prefHeight="505.0" prefWidth="1012.0">
                <padding>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                  <Insets top="15.0" />
                </padding>
             </FlowPane>
          </content>
