--- a/src/main/resources/fxmls/fan/BookingFanmeets.fxml
+++ b/src/main/resources/fxmls/fan/BookingFanmeets.fxml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.popup.BookingFanMeetsView">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.popup.BookingFanMeetsView">
    <children>
       <Pane>
          <children>
@@ -24,7 +30,7 @@
       </Pane>
       <HBox alignment="CENTER" prefHeight="316.0" prefWidth="800.0">
          <children>
-            <Pane prefHeight="316.0" prefWidth="282.0">
+            <Pane prefHeight="316.0" prefWidth="277.0">
                <children>
                   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTGRAY" height="254.0" layoutX="16.0" layoutY="31.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-fx-arc-height: 30; -fx-arc-width: 30;" width="250.0" />
                   <ImageView fx:id="profilePicture" fitHeight="185.0" fitWidth="179.0" layoutX="53.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
@@ -34,11 +40,11 @@
                   </ImageView>
                </children>
             </Pane>
-            <VBox alignment="CENTER_RIGHT" prefHeight="316.0" prefWidth="199.0" spacing="40.0">
+            <VBox alignment="CENTER_RIGHT" prefHeight="316.0" prefWidth="177.0" spacing="40.0">
                <children>
                   <Label layoutX="10.0" layoutY="10.0" style="-fx-border-color: black; -fx-border-width: 0 2 0 0;" text="TIME ">
                      <font>
-                        <Font name="Arial" size="25.0" />
+                        <Font size="25.0" />
                      </font>
                      <VBox.margin>
                         <Insets left="40.0" />
@@ -46,7 +52,7 @@
                   </Label>
                   <Label style="-fx-border-color: BLACK; -fx-border-width: 0 2 0 0;" text="DATE ">
                      <font>
-                        <Font name="Arial" size="25.0" />
+                        <Font size="25.0" />
                      </font>
                      <VBox.margin>
                         <Insets left="40.0" />
@@ -54,7 +60,7 @@
                   </Label>
                   <Label layoutX="10.0" layoutY="36.0" style="-fx-border-color: BLACK; -fx-border-width: 0 2 0 0;" text="DURATION ">
                      <font>
-                        <Font name="Arial" size="25.0" />
+                        <Font size="25.0" />
                      </font>
                      <VBox.margin>
                         <Insets left="40.0" />
@@ -64,7 +70,7 @@
             </VBox>
             <VBox alignment="CENTER_LEFT" prefHeight="316.0" prefWidth="186.0" spacing="36.0">
                <children>
-                  <TextField fx:id="timeTF" layoutX="30.0" layoutY="150.0" promptText="Enter TIme">
+                  <TextField fx:id="timeTF" layoutX="30.0" layoutY="150.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="42.0" prefWidth="190.0" promptText="Enter Time" style="-fx-border-color: #bfeaf5;">
                      <font>
                         <Font name="Arial" size="18.0" />
                      </font>
@@ -74,7 +80,7 @@
                         <Font size="23.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="durationTF" promptText="Enter Duration">
+                  <TextField fx:id="durationTF" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="42.0" prefWidth="190.0" promptText="Enter Duration" style="-fx-border-color: #bfeaf5;">
                      <font>
                         <Font name="Arial" size="18.0" />
                      </font>
@@ -86,11 +92,11 @@
             </VBox>
          </children>
       </HBox>
-      <HBox alignment="CENTER" prefHeight="48.0" prefWidth="800.0">
+      <HBox alignment="CENTER" prefHeight="48.0" prefWidth="800.0" style="-fx-background-color: #e4e4e4;">
          <children>
             <Label alignment="CENTER" prefHeight="27.0" prefWidth="83.0" style="-fx-border-color: black; -fx-border-width: 0 2 0 0;" text="PRICE ">
                <font>
-                  <Font name="Arial" size="24.0" />
+                  <Font size="25.0" />
                </font>
             </Label>
             <Label fx:id="priceLB" alignment="CENTER" layoutX="368.0" layoutY="22.0" prefHeight="27.0" prefWidth="83.0" text="P5000" textFill="#1b4994">
@@ -108,7 +114,7 @@
             <Font name="Arial" size="14.0" />
          </font>
       </Text>
-      <Button fx:id="confirmBT" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Confirm">
+      <Button fx:id="confirmBT" layoutX="58.0" layoutY="371.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="200.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Confirm">
          <font>
             <Font size="18.0" />
          </font>
