--- a/src/main/resources/fxmls/fan/FanFeedbacks.fxml
+++ b/src/main/resources/fxmls/fan/FanFeedbacks.fxml
@@ -37,7 +37,7 @@
          <children>
             <AnchorPane prefHeight="318.0" prefWidth="800.0">
                <children>
-                  <TextField alignment="TOP_LEFT" layoutX="58.0" layoutY="16.0" prefHeight="286.0" prefWidth="684.0" style="-fx-border-color: #1b4994;" text="I have a feedback on ...">
+                  <TextField alignment="TOP_LEFT" layoutX="58.0" layoutY="16.0" prefHeight="286.0" prefWidth="684.0" style="-fx-border-color: #bfeaf5;" text="I have a feedback on ...">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -46,7 +46,7 @@
             </AnchorPane>
          </children>
       </Pane>
-      <Button fx:id="FanMeetDetailsBackButton" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Submit">
+      <Button fx:id="FanMeetDetailsBackButton" layoutX="58.0" layoutY="371.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="200.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Submit">
          <font>
             <Font name="Arial" size="18.0" />
          </font>
