--- a/src/main/resources/fxmls/fan/FanMenuUI.fxml
+++ b/src/main/resources/fxmls/fan/FanMenuUI.fxml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1013.6" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.FanMenuView">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1013.6" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.FanMenuView">
    <children>
       <Pane prefHeight="67.2" prefWidth="1013.6" style="-fx-background-color: #1b4994;">
          <children>
@@ -34,12 +40,12 @@
             <Insets bottom="10.0" left="20.0" right="10.0" top="15.0" />
          </VBox.margin>
          <font>
-            <Font name="Arial Black" size="27.0" />
+            <Font name="Arial Black" size="25.0" />
          </font>
       </Text>
       <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="619.0" prefWidth="1014.0">
          <content>
-            <FlowPane fx:id="flowPane" columnHalignment="CENTER" hgap="20.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="999.0" vgap="20.0">
+            <FlowPane fx:id="flowPane" columnHalignment="CENTER" hgap="20.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="629.0" prefWidth="999.0" style="-fx-background-color: #e4e4e4;" vgap="20.0">
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </padding></FlowPane>
