--- a/src/main/resources/fxmls/fan/FinishedFanMeetsCard.fxml
+++ b/src/main/resources/fxmls/fan/FinishedFanMeetsCard.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<HBox prefHeight="185.0" prefWidth="943.0" style="-fx-border-color: #1b4994; -fx-background-radius: 10; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.cards.FinishedFanMeetCardView">
+<HBox prefHeight="185.0" prefWidth="943.0" style="-fx-border-color: #1b4994; -fx-background-radius: 10; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fan.view.cards.FinishedFanMeetCardView">
    <children>
       <VBox prefHeight="184.0" prefWidth="146.0">
          <children>
@@ -50,7 +52,7 @@
             </Text>
          </children>
       </VBox>
-      <VBox layoutX="11.0" layoutY="11.0" prefHeight="150.0" prefWidth="194.0">
+      <VBox layoutX="11.0" layoutY="11.0" prefHeight="184.0" prefWidth="186.0">
          <children>
             <Text fx:id="meetIDLB" strokeType="OUTSIDE" strokeWidth="0.0" text="220000202020">
                <font>
@@ -98,7 +100,7 @@
          <children>
             <Text fx:id="timestampLB" strokeType="OUTSIDE" strokeWidth="0.0" text="Booked on 2023 -11-17  15:30:10" wrappingWidth="343.51747703552246">
                <font>
-                  <Font size="22.0" />
+                  <Font name="System Italic" size="22.0" />
                </font>
                <VBox.margin>
                   <Insets right="18.0" top="5.0" />
