--- a/src/main/resources/fxmls/Idol/CreateNewFanMeetView.fxml
+++ b/src/main/resources/fxmls/Idol/CreateNewFanMeetView.fxml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <Pane>
             <children>
-                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1b4994" height="55.0" stroke="BLACK" strokeType="INSIDE" style="-fx-stroke: blue;" width="801.0" />
-                <Label alignment="CENTER" layoutY="9.0" prefHeight="38.0" prefWidth="341.0" text="Create New Fan Meet" textFill="WHITE">
+                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1b4994" height="55.0" stroke="WHITE" strokeType="INSIDE" width="800.0" />
+                <Label alignment="TOP_LEFT" layoutX="20.0" layoutY="12.0" prefHeight="38.0" prefWidth="298.0" text="Create New Fan Meet" textFill="WHITE">
                     <font>
-                        <Font name="Arial Black" size="25.0" />
+                        <Font name="Arial Black" size="19.0" />
                     </font>
                 </Label>
             </children>
@@ -26,16 +21,16 @@
             <Insets bottom="20.0" />
          </VBox.margin>
         </Pane>
-        <HBox prefHeight="267.0" prefWidth="800.0">
+        <HBox prefHeight="352.0" prefWidth="800.0">
             <children>
-                <VBox prefHeight="10.0" prefWidth="400.0">
+                <VBox prefHeight="330.0" prefWidth="400.0">
                     <children>
                         <Label alignment="TOP_LEFT" text="Pick Date">
                             <font>
-                                <Font name="Arial" size="22.0" />
+                                <Font name="System Bold" size="18.0" />
                             </font>
                             <VBox.margin>
-                                <Insets left="30.0" top="10.0" />
+                                <Insets top="10.0" />
                             </VBox.margin>
                         </Label>
                   <DatePicker prefHeight="58.0" prefWidth="298.0" style="-fx-background-color: #f0f3f7; -fx-border-color: #1b4994;" />
@@ -45,30 +40,48 @@
                   <Insets left="40.0" right="20.0" />
                </padding>
                 </VBox>
-                <VBox prefHeight="346.0" prefWidth="396.0">
+                <VBox prefHeight="352.0" prefWidth="396.0">
                     <children>
-                  <Pane prefHeight="209.0" prefWidth="326.0" style="-fx-background-color: #1571b2;">
+                  <Pane prefHeight="293.0" prefWidth="326.0" style="-fx-background-color: #e4e4e4;">
                      <children>
-                        <VBox prefHeight="210.0" prefWidth="336.0">
+                        <VBox layoutX="-8.0" prefHeight="288.0" prefWidth="340.0">
                            <children>
-                              <Label prefHeight="39.0" prefWidth="130.0" text="Enter Start Time" textFill="WHITE">
+                              <Label prefHeight="39.0" prefWidth="201.0" text="Enter Start Time" textFill="#280000">
                                  <font>
-                                    <Font name="Arial Black" size="12.0" />
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="5.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="42.0" prefWidth="290.0" promptText="eg. 13:00">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets bottom="15.0" left="5.0" />
+                                 </VBox.margin></TextField>
+                              <Label layoutX="30.0" layoutY="10.0" prefHeight="39.0" prefWidth="130.0" text="Enter End Time">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
                                  </font>
                               </Label>
-                              <TextField promptText="eg. 13:00" />
-                              <Label layoutX="30.0" layoutY="10.0" prefHeight="39.0" prefWidth="130.0" text="Enter End Time" textFill="WHITE">
+                              <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="289.0" promptText="eg. 23:00">
                                  <font>
-                                    <Font name="Arial Black" size="12.0" />
+                                    <Font size="15.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets bottom="15.0" left="5.0" />
+                                 </VBox.margin></TextField>
+                              <Label layoutX="30.0" layoutY="75.0" prefHeight="39.0" prefWidth="210.0" text="Enter Price per Minute" textFill="#030000">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
                                  </font>
                               </Label>
-                              <TextField promptText="eg. 23:00" />
-                              <Label layoutX="30.0" layoutY="75.0" prefHeight="39.0" prefWidth="154.0" text="Enter Price per Minute" textFill="WHITE">
-                                 <font>
-                                    <Font name="Arial Black" size="12.0" />
-                                 </font>
-                              </Label>
-                              <TextField layoutX="30.0" layoutY="114.0" promptText="eg. 100" />
+                              <TextField layoutX="30.0" layoutY="114.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="290.0" promptText="eg. 100">
+                                 <VBox.margin>
+                                    <Insets bottom="15.0" left="5.0" />
+                                 </VBox.margin></TextField>
                            </children>
                            <padding>
                               <Insets left="20.0" right="20.0" />
@@ -84,10 +97,13 @@
             </children></HBox>
 
 
-        <Button fx:id="FanMeetDetailsBackButton" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Add Fanmeet">
+        <Button fx:id="FanMeetDetailsBackButton" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Add Fanmeet">
             <font>
                 <Font name="Arial Bold" size="18.0" />
             </font>
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
         </Button>
 
     </children>
