--- a/src/main/resources/fxmls/Idol/FanMeetDetailsIdol.fxml
+++ b/src/main/resources/fxmls/Idol/FanMeetDetailsIdol.fxml
@@ -37,11 +37,11 @@
                         </ImageView>
                     </children>
                 </Pane>
-                <VBox alignment="CENTER_RIGHT" prefHeight="316.0" prefWidth="199.0" spacing="40.0">
+                <VBox alignment="CENTER_RIGHT" prefHeight="316.0" prefWidth="177.0" spacing="40.0">
                     <children>
                         <Label layoutX="10.0" layoutY="10.0" style="-fx-border-color: black; -fx-border-width: 0 2 0 0;" text="TIME ">
                             <font>
-                                <Font name="Arial" size="25.0" />
+                                <Font size="25.0" />
                             </font>
                             <VBox.margin>
                                 <Insets left="40.0" />
@@ -49,7 +49,7 @@
                         </Label>
                         <Label style="-fx-border-color: BLACK; -fx-border-width: 0 2 0 0;" text="DATE ">
                             <font>
-                                <Font name="Arial" size="25.0" />
+                                <Font size="25.0" />
                             </font>
                             <VBox.margin>
                                 <Insets left="40.0" />
@@ -57,7 +57,7 @@
                         </Label>
                         <Label layoutX="10.0" layoutY="36.0" style="-fx-border-color: BLACK; -fx-border-width: 0 2 0 0;" text="DURATION ">
                             <font>
-                                <Font name="Arial" size="25.0" />
+                                <Font size="25.0" />
                             </font>
                             <VBox.margin>
                                 <Insets left="40.0" />
@@ -89,14 +89,17 @@
                 </VBox>
             </children>
         </HBox>
-        <HBox alignment="CENTER" prefHeight="55.0" prefWidth="800.0">
+        <HBox alignment="CENTER" prefHeight="48.0" prefWidth="800.0" style="-fx-background-color: #e4e4e4;">
             <children>
                 <Label alignment="CENTER" prefHeight="27.0" prefWidth="195.0" style="-fx-border-color: black; -fx-border-width: 0 2 0 0;" text="Price per minute">
                     <font>
                         <Font name="Arial" size="24.0" />
                     </font>
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
                 </Label>
-                <Label fx:id="pricePerMinuteLabel" alignment="CENTER" layoutX="368.0" layoutY="22.0" prefHeight="27.0" prefWidth="122.0" text="P5000" textFill="#1b4994">
+                <Label fx:id="pricePerMinuteLabel" layoutX="368.0" layoutY="22.0" prefHeight="27.0" prefWidth="122.0" text="P5000" textFill="#1b4994">
                     <font>
                         <Font name="Arial Bold" size="24.0" />
                     </font>
