--- a/src/main/resources/fxmls/Idol/FeedbackCard.fxml
+++ b/src/main/resources/fxmls/Idol/FeedbackCard.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="580.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.FeedbackCardView">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="745.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.FeedbackCardView">
    <padding>
       <Insets bottom="10.0" left="10.0" top="10.0" />
    </padding>
@@ -21,19 +21,19 @@
             <Image url="@../../idol/images/profile-user.png" />
          </image>
       </ImageView>
-      <Pane prefHeight="130.0" prefWidth="418.0" style="-fx-background-color: #f0f3f7;">
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="130.0" prefWidth="583.0" style="-fx-background-color: #f0f3f7;">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
          <children>
             <Label fx:id="fanUsernameLabel" layoutX="22.0" prefHeight="35.0" prefWidth="127.0" text="Fan Username">
                <font>
-                  <Font name="Arial" size="18.0" />
+                  <Font name="Arial Bold" size="18.0" />
                </font>
             </Label>
-            <Label fx:id="feedbackLabel" layoutX="22.0" layoutY="35.0" prefHeight="88.0" prefWidth="379.0" wrapText="true">
+            <Label fx:id="feedbackLabel" layoutX="22.0" layoutY="35.0" prefHeight="88.0" prefWidth="556.0" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum" wrapText="true">
                <font>
-                  <Font size="18.0" />
+                  <Font size="15.0" />
                </font></Label>
          </children>
       </Pane>
