--- a/src/main/resources/fxmls/Idol/ListOfBookedFansCard.fxml
+++ b/src/main/resources/fxmls/Idol/ListOfBookedFansCard.fxml
@@ -8,12 +8,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="580.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.ListOfBookedFansCardView">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="745.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.ListOfBookedFansCardView">
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
     <children>
-        <ImageView fx:id="imageView" fitHeight="103.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="imageView" fitHeight="128.0" fitWidth="141.0" pickOnBounds="true" preserveRatio="true">
             <HBox.margin>
                 <Insets right="10.0" />
             </HBox.margin>
@@ -21,46 +21,46 @@
                 <Image url="@../../idol/images/profile-user.png" />
             </image>
         </ImageView>
-        <Pane prefHeight="130.0" prefWidth="459.0" style="-fx-background-color: #f0f3f7;">
+        <Pane prefHeight="130.0" prefWidth="610.0" style="-fx-background-color: #f0f3f7;">
             <children>
-                <Label fx:id="fanNameLabel" layoutX="6.0" layoutY="14.0" prefHeight="35.0" prefWidth="204.0" text="Fan Name" wrapText="true">
+                <Label fx:id="fanNameLabel" layoutX="35.0" layoutY="27.0" prefHeight="35.0" prefWidth="204.0" text="Fan Name" wrapText="true">
                     <font>
                         <Font name="Arial" size="20.0" />
                     </font>
                 </Label>
-                <Label fx:id="fanUsernameLabel" layoutX="6.0" layoutY="57.0" prefHeight="35.0" prefWidth="207.0" text="Fan User Name" wrapText="true">
+                <Label fx:id="fanUsernameLabel" layoutX="35.0" layoutY="87.0" prefHeight="35.0" prefWidth="207.0" text="Fan User Name" wrapText="true">
                     <font>
                         <Font name="Arial" size="20.0" />
                     </font>
                 </Label>
-                <Label fx:id="fanEmailLabel" layoutX="225.0" layoutY="14.0" prefHeight="35.0" prefWidth="208.0" text="Fan Email" wrapText="true">
+                <Label fx:id="fanEmailLabel" layoutX="317.0" layoutY="24.0" prefHeight="35.0" prefWidth="208.0" text="Fan Email" wrapText="true">
+                    <font>
+                        <Font name="Arial" size="20.0" />
+                    </font>
+                </Label>
+                <Label fx:id="timestampLabel" layoutX="317.0" layoutY="87.0" prefHeight="35.0" prefWidth="214.0" text="Timestamp here" wrapText="true">
+                    <font>
+                        <Font name="Arial" size="20.0" />
+                    </font>
+                </Label>
+                <Label layoutX="307.0" layoutY="12.0" prefHeight="8.0" prefWidth="204.0" text="Email:" wrapText="true">
                     <font>
                         <Font name="Arial" size="16.0" />
                     </font>
                 </Label>
-                <Label fx:id="timestampLabel" layoutX="225.0" layoutY="57.0" prefHeight="35.0" prefWidth="214.0" text="Timestamp here" wrapText="true">
+                <Label layoutX="306.0" layoutY="73.0" prefHeight="8.0" prefWidth="204.0" text="Book Date:" wrapText="true">
                     <font>
                         <Font name="Arial" size="16.0" />
                     </font>
                 </Label>
-                <Label layoutX="224.0" layoutY="5.0" prefHeight="8.0" prefWidth="204.0" text="email:" wrapText="true">
+                <Label layoutX="27.0" layoutY="13.0" prefHeight="8.0" prefWidth="204.0" text="Name:" wrapText="true">
                     <font>
-                        <Font name="Arial" size="12.0" />
+                        <Font name="Arial" size="16.0" />
                     </font>
                 </Label>
-                <Label layoutX="224.0" layoutY="47.0" prefHeight="8.0" prefWidth="204.0" text="booked date:" wrapText="true">
+                <Label layoutX="27.0" layoutY="71.0" prefHeight="8.0" prefWidth="204.0" text="Username:" wrapText="true">
                     <font>
-                        <Font name="Arial" size="12.0" />
-                    </font>
-                </Label>
-                <Label layoutX="8.0" layoutY="4.0" prefHeight="8.0" prefWidth="204.0" text="name:" wrapText="true">
-                    <font>
-                        <Font name="Arial" size="12.0" />
-                    </font>
-                </Label>
-                <Label layoutX="8.0" layoutY="46.0" prefHeight="8.0" prefWidth="204.0" text="username:" wrapText="true">
-                    <font>
-                        <Font name="Arial" size="12.0" />
+                        <Font name="Arial" size="16.0" />
                     </font>
                 </Label>
             </children>
