--- a/src/main/resources/fxmls/Idol/MainMenuIdolPage.fxml
+++ b/src/main/resources/fxmls/Idol/MainMenuIdolPage.fxml
@@ -11,7 +11,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.MainMenuIdolPageView">
     <left>
-        <VBox alignment="TOP_CENTER" prefHeight="760.0" prefWidth="286.0" spacing="50.0" style="-fx-background-color: #f0f3f7;" BorderPane.alignment="CENTER">
+        <VBox alignment="TOP_CENTER" prefHeight="760.0" prefWidth="286.0" spacing="50.0" style="-fx-background-color: #f0f3f7; -fx-border-color: #1b4994; -fx-border-width: 0 5 0 0;" BorderPane.alignment="CENTER">
             <children>
                 <ImageView fx:id="imageView" fitHeight="168.0" fitWidth="181.0" pickOnBounds="true" preserveRatio="true">
                     <image>
