feat: Implement "Browse Idol" Button
This commit introduces the "Browse Idol" button functionality. Instead of the "Fanmeet" button displaying the list of idols, the new "Browse Idol" button will perform this task. The "Fanmeet" button will now be reserved for fans to join fanmeets they have booked.

--- a/src/main/resources/fxmls/fan/FanMainPage.fxml
+++ b/src/main/resources/fxmls/fan/FanMainPage.fxml
@@ -20,12 +20,12 @@
                   <Font name="Arial" size="19.0" />
                </font>
             </Button>
-            <Button id="menuBT" fx:id="bookingsBT" layoutX="58.0" layoutY="268.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" text="Bookings">
+            <Button id="menuBT" fx:id="browseIdolsBT" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" text="Browse Idols">
                <font>
                   <Font name="Arial" size="19.0" />
                </font>
             </Button>
-            <Button id="menuBT" fx:id="settingsBT" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" text="Settings">
+            <Button id="menuBT" fx:id="bookingsBT" layoutX="58.0" layoutY="268.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" text="Bookings">
                <font>
                   <Font name="Arial" size="19.0" />
                </font>
