--- a/src/main/resources/fxmls/Idol/DeleteFanMeet.fxml
+++ b/src/main/resources/fxmls/Idol/DeleteFanMeet.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.DeleteFanMeetView">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.CancelConfirmationView">
    <children>
       <Pane>
          <children>
             <Pane prefHeight="55.0" prefWidth="800.0" style="-fx-background-color: #1b4994;">
                <children>
-                  <Label alignment="TOP_LEFT" layoutX="19.0" layoutY="13.0" prefHeight="38.0" prefWidth="446.0" text="Delete Fan Meet" textFill="WHITE">
+                  <Label alignment="TOP_LEFT" layoutX="19.0" layoutY="13.0" prefHeight="38.0" prefWidth="446.0" text="Cancel Confirmation" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="19.0" />
                      </font>
@@ -23,7 +23,7 @@
             </Pane>
          </children>
       </Pane>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Are you sure you want to delete this Fan Meet?" textAlignment="CENTER" wrappingWidth="695.7367210388184">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Are you sure you want to cancel this?" textAlignment="CENTER" wrappingWidth="695.7367210388184">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
