fix: Cancel bookings and fanmeets
This commit resolves the bookings and fanmeets not being reflected in the UI for the fan and idol respectively

--- a/src/main/resources/fxmls/Idol/FanMeetDetailsIdol.fxml
+++ b/src/main/resources/fxmls/Idol/FanMeetDetailsIdol.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.controller.FanMeetDetailsIdolView">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="idol.view.FanMeetDetailsIdolView">
     <children>
         <Pane>
             <children>
@@ -67,17 +64,17 @@
                 </VBox>
                 <VBox alignment="CENTER_LEFT" prefHeight="316.0" prefWidth="186.0" spacing="40.0">
                     <children>
-                        <Label fx:id="timeLabel" text="4:10 PM">
+                        <Label fx:id="timeLabel" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="36.0" text="4:10 PM">
                             <font>
                                 <Font name="Arial" size="25.0" />
                             </font>
                         </Label>
-                        <Label fx:id="dateLabel" text="4/3/2024">
+                        <Label fx:id="dateLabel" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="36.0" text="4/3/2024">
                             <font>
                                 <Font name="Arial" size="25.0" />
                             </font>
                         </Label>
-                        <Label fx:id="durationLabel" text="20 Minutes">
+                        <Label fx:id="durationLabel" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="36.0" text="20 Minutes">
                             <font>
                                 <Font name="Arial" size="25.0" />
                             </font>
@@ -109,5 +106,13 @@
                 </Label>
             </children>
         </HBox>
+      <Label fx:id="cancelledLB" textFill="RED">
+         <font>
+            <Font name="Arial" size="22.0" />
+         </font>
+         <VBox.margin>
+            <Insets top="25.0" />
+         </VBox.margin>
+      </Label>
     </children>
 </VBox>
